# zorn

./: .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  zorn.example.toml
INTAKE/: README.md
cert/lattice/: README.md  adaptation-tiers.yaml  artifacts.yaml  assertions.yaml  capabilities.yaml  coverage.yaml  domains.yaml  fixture-groups.yaml  fixtures.yaml  levels.yaml  scenarios.yaml
cert/ui/: README.md  requirements.yaml
docs/: README.md
docs/design/: alpha-readiness-roadmap.md  alpha1-closeout-checklist.md  alpha1-gap-closure-plan.md  compatibility-matrix.md  contract-hardening-slice.md  faithful-lattice-surrogate-plan.md  grpc-compatibility.md  grpc-proto-compliance-checklist.md  lattice-certification-goal.md  name-portability.md  proto-compliance-slice.md  roadmap.md  (+13 more)
eval_dis/: __init__.py  entity_state.py  replay.py
proto/: README.md  buf.gen.yaml  buf.yaml
requirements/: grpc-buf.txt  grpc-runtime.txt  lattice-buf-generated.txt
scripts/: all.py  audit_lattice_grpc_protos.py  check_env.py  check_plans.py  compat_matrix.py  contract_smoke.py  dev.py  ecosystem_report.py  fetch_lattice_proto_snapshot.sh  fetch_upstream_docs.sh  generate_grpc_wire_fixtures.py  generate_lattice_grpc_python.sh  grpc_smoke.py  install_grpc_deps.sh  make_dev_tls.sh  plan_report.py  proto_contract_report.py  run_grpcurl_checks.sh  run_sample_app_ais_rest.sh  run_sample_app_objects.sh  showcase_report.py  smoke.sh  sync_official_lattice_protos.sh  workflow_bootstrap.py
tests/: README.md  api_transport.py  conftest.py  test_alpha1_closeout.py  test_cert_contracts.py  test_cert_harness.py  test_config_toml.py  test_contract_fixture_runner.py  test_contract_shapes.py  test_dis_entity_state_adapter.py  test_entities.py  test_entity_expiry_contract.py  test_grpc_config.py  test_grpc_contract_descriptor_audit.py  test_grpc_contract_manifest.py  test_grpc_dependency_message.py  test_grpc_wire_fixtures.py  test_java_runner.py  test_json_bridge_tolerant_any.py  test_lattice_boundary_hardening.py  test_lattice_ecosystem_registry.py  test_native_sdk_runners.py  test_objects.py  test_proto_contract.py  test_public_api_replay.py  test_smoke.py  test_tasks.py  test_ui_requirements_contract.py  test_verification_surfaces.py  test_zorn_next_milestone_plan.py  test_zorn_package_boundary.py  test_zorn_showcase_milestones.py
(+146 files in other folders)
