[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "zorn"
version = "0.1.0"
description = "A configurable local C2/COP compatibility sandbox for Lattice-oriented workflows."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115",
  "PyYAML>=6.0",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=1.3",
  "httpx>=0.27",
  "ruff>=0.15",
  "mypy>=1.19",
  "types-protobuf>=7.34",
]
grpc = [
  "grpcio==1.80.0",
  "protobuf==7.34.1",
  "anduril-lattice-sdk-grpc-python==1.80.0.1.20260515215502+ed34febdefc1",
  "anduril-lattice-sdk-protocolbuffers-python==34.1.0.1.20260515215502+ed34febdefc1",
  "anduril-lattice-sdk-protocolbuffers-pyi==34.1.0.1.20260515215502+ed34febdefc1",
]

[project.scripts]
zorn = "zorn.__main__:main"
zorn-api = "zorn.main:run"
zorn-grpc = "zorn.grpc_api.server:run"
zorn-cert = "zorn.cert.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zorn"]
artifacts = [
  "cert/lattice/*.yaml",
  "cert/lattice/README.md",
  "cert/ui/*.yaml",
  "cert/ui/README.md",
  "docs/design/*.md",
  "docs/manifests/*.yaml",
  "docs/manifests/*.json",
  "docs/reference/lattice-ecosystem-*",
  "docs/reference/zorn-showcase-*",
  "docs/reference/ui/*",
  "examples/scenarios/*.json",
  "proto/zorn/**/*.proto",
  "tests/fixtures/**/*.jsonl",
  "tests/fixtures/**/*.yaml",
  "tests/fixtures/**/*.md",
]

[tool.mypy]
cache_dir = "/private/tmp/zorn/.mypy_cache"
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = "/private/tmp/zorn/.pytest_cache"
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["artifacts", "cache", "archive", "DELETEME"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
cache-dir = "/private/tmp/zorn/.ruff_cache"
line-length = 100
target-version = "py312"
extend-exclude = [".tmp"]

[[tool.uv.index]]
name = "buf"
url = "https://buf.build/gen/python"
explicit = true

[tool.uv.sources]
anduril-lattice-sdk-grpc-python = { index = "buf" }
anduril-lattice-sdk-protocolbuffers-python = { index = "buf" }
anduril-lattice-sdk-protocolbuffers-pyi = { index = "buf" }
